Fixed spacing on several pages

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3951,7 +3951,7 @@ input, select, textarea {
 					#main > .post header.major > h1, #main > .post header.major h2 {
 						font-size: 2.5rem;
 						line-height: 1.2;
-						margin: -1.5rem 0 1.5rem 0;
+						/*margin: -1.5rem 0 1.5rem 0;*/
 					}
 
 			}
@@ -4649,7 +4649,7 @@ input, select, textarea {
 		border: 0;
 		color: #ffffff;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
-		font-size: 2.0rem;
+		font-size: 1.7rem;
 		background: #0b0b0b;
 		font-weight: 900;
 		letter-spacing: 0.075em;
